# diagram-as-code-mcp-server

./: .gitignore  Dockerfile  GEMINI.md  README.md  pyproject.toml
.github/workflows/: docker-image.yml  docker-publish.yml
docker/: Dockerfile
hkopenai.document_as_code_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
hkopenai/diagram_as_code_mcp_server/: __main__.py  prompt_get_mermaid_js.py  server.py  tool_fix_mermaid_js.py
hkopenai/document_as_code_mcp_server/: __main__.py  prompt_get_mermaid_js.py  server.py  tool_fix_mermaid_js.py
tests/: test_diagram_as_code_server.py  test_main.py  test_server.py  test_tool_fix_mermaid_js.py
