[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hkopenai.document_as_code_mcp_server"
version = "0.1.0"
description = "Document as Code MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
dependencies = ["fastmcp>=0.1.0", "pytest>=8.2.0", "pytest-cov>=6.1.1"]
[[project.authors]]
name = "Neo Chow"
email = "neo@01man.com"

[tool.setuptools]
packages = ["hkopenai.document_as_code_mcp_server"]
include-package-data = false

[tool.bandit]
exclude_dirs = ["venv", ".venv", "tests"]

[project.urls]
repository = "https://github.com/hkopenai/document-as-code-mcp-server"

[project.scripts]
document_as_code_mcp_server = "hkopenai.document_as_code_mcp_server.app:main"
